examples/good/06_1_recursive_function.soy
def fibonacci(n = int) -> int {
    if (n < 2) {
        return n;
    }
    return fibonacci(n - 1) + fibonacci(n - 2);
}

print("fibonacci(10):");
print(fibonacci(10));

print("6_1_PASSED");