examples/bad/08_1_modify_read_only_variable.soy
for (i = 5 to 10) {
    i = i + 1;
}